    - Add language property to the French translation file.
    - Update qt_<LANG>.qm files from Qt4.8 (as in current Debian sid).
    - Rename x2goclient_nb.ts to x2goclient_nb_no.ts.
    - Update all translation files (lupdate), translate unfinished translation
      tags in x2goclient_de.ts.
    - Provide empty translation file x2goclient_en.ts.

  [ Mihai Moldovan ]
  * New upstream version (3.99.1.0):
    - Mac OS patch: Raise the stack space to 2MB for secondary threads. It
      previously used the 512KB system default.

  [ Daniel Lindgren ]
  * New upstream version (3.99.1.0):
    - Add Swedish translation file.
    - Fine-tune Swedish translation file.

  [ Terje Andersen ]
  * New upstream version (3.99.1.0):
    - Add Norwegian (Bokmal) translation. Qt4 lacks Norwegian/Bokmal
      support, so some of the widgets may stay in English.
    - Fine-tune/fix Norwegian (Bokmal) translation.

  [ Jan Engelhardt ]
  * New upstream version (3.99.1.0):
    - Use /cgi-bin/man/ path in web'ified man pages.
    - Use ,,${MAKE}'' instead of ,,make'' in Makefile.
    - Include <netinet/in.h> in sshprocess.h to fix missing
      struct sockaddr_in.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.1.0):
    - Get new ports from x2goresume-session if reserved ports are busy
    - Fix segmentation fault by failed SSH connection to X2Go server

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 14:07:55 +0100

x2goclient (3.99.0.6-0~x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.0.6):
    - Update copyright section in ssmasterconnection.h/cpp and
      sshprocess.h/cpp.
    - Traditional Chinese(zh_TW) translation for x2goclient from
      Liu Arlo <arlo.liu@atrustcorp.com>.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 13:52:40 +0100

x2goclient (3.99.0.5-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.0.5):