@@ -1055,7 +1055,7 @@ Public key hash: </source>
     </message>
     <message>
         <location filename="onmainwindow_part2.cpp" line="146"/>
-        <source>Authentification failed</source>
+        <source>Authentication failed</source>
         <translation>認證失敗</translation>
     </message>
     <message>
