@@ -11,6 +11,7 @@ x2goclient (3.99.1.0-0~x2go1) UNRELEASED; urgency=low
     - Update all translation files (lupdate), translate unfinished translation
       tags in x2goclient_de.ts.
     - Provide empty translation file x2goclient_en.ts.
+    - Fix misspelled word ,,Authentification'' -> ,,Authentication''.
 
   [ Mihai Moldovan ]
   * New upstream version (3.99.1.0):
